# sionna-sim

./: .gitignore  Dockerfile  check_uma_call.py  debug_sionna.py  docker-compose.yml  inspect_pusch.py  inspect_uma.py  inspect_umi.py  issue_raw.json  launch.json  main.py  mount_nas.sh  mpr_table.csv  pyproject.toml  raytrace_req_spec.md  run_pgx.sh  setup_env_pgx.sh  setup_ssh.sh  simulation_results.csv  spy_umi.py  test_log.txt
.agent/rules/: dev-guide.md
.nyc_output/processinfo/: 14b3b60d-401e-4ac1-bc35-5811f8a4f9c3.json  614442bd-896e-4923-88c2-4a72afdf5f76.json  index.json
data/matlab_dummy/: coverage_definition.mat  sector_000_paths.mat  sector_000_power.mat  sector_001_paths.mat  sector_001_power.mat  sector_002_paths.mat  sector_002_power.mat  sector_003_paths.mat  sector_003_power.mat  sector_004_paths.mat  sector_004_power.mat  sector_005_paths.mat  sector_005_power.mat  sector_006_paths.mat  sector_006_power.mat  sector_007_paths.mat  sector_007_power.mat  sector_008_paths.mat  sector_008_power.mat  sector_009_paths.mat  sector_009_power.mat  sector_010_paths.mat  sector_010_power.mat  sector_011_paths.mat  sector_011_power.mat  sector_012_paths.mat  sector_012_power.mat  sector_013_paths.mat  sector_013_power.mat  sector_014_paths.mat  sector_014_power.mat  (+12 more)
docs/: user_guide.md
libs/: my_configs.py  sim_core.py  sls_configs.py
test_external_rt_data/: dummy_rt.h5
tests/: test_beam_selection_logic.py  test_external_loaders.py  test_external_rt_workflow.py  test_import.py  verify_mcs_refactor.py
tools/: convert_docs.py  convert_h5_to_zarr.py
(+448 files in other folders)
